force-app/main/default/objects/Visit_Store_Interaction_Insights__c/Visit_Store_Interaction_Insights__c.object-meta.xml
<CustomObject>
    <label>Visit &amp; Store Interaction Insights</label>
    <nameField>
        <displayFormat>VSI-{0000}</displayFormat>
        <label>Visit &amp; Store Interaction Insights Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit &amp; Store Interaction Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>