force-app/main/default/objects/Visit_Store_Interaction_Insights__c/fields/Appointment_Visit_or_Walk_in__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Visit_or_Walk_in__c</fullName>
    <label>Appointment Visit or Walk-in</label>
    <length>255</length>
    <type>Text</type>
</CustomField>