force-app/main/default/objects/Visit_Store_Interaction_Insights__c/fields/Average_Visit_Gap__c.field-meta.xml
<CustomField>
    <fullName>Average_Visit_Gap__c</fullName>
    <label>Average Visit Gap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>