force-app/main/default/objects/Visit_Store_Interaction_Insights__c/fields/Browsing_Time_with_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Browsing_Time_with_Product_Category__c</fullName>
    <label>Browsing Time with Product Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>