force-app/main/default/objects/Visit_Store_Interaction_Insights__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit &amp; Store Interaction Insights</relationshipLabel>
    <relationshipName>Visit_Store_Interaction_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>