force-app/main/default/objects/Visit_Store_Interaction_Insights__c/fields/In_Store_Recommendations_Accepted__c.field-meta.xml
<CustomField>
    <fullName>In_Store_Recommendations_Accepted__c</fullName>
    <label>In-Store Recommendations Accepted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>