force-app/main/default/objects/Visit_Store_Interaction_Insights__c/fields/Last_Store_Visited__c.field-meta.xml
<CustomField>
    <fullName>Last_Store_Visited__c</fullName>
    <label>Last Store Visited</label>
    <length>255</length>
    <type>Text</type>
</CustomField>