force-app/main/default/objects/Visit_Store_Interaction_Insights__c/fields/Store_Interaction_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Store_Interaction_Satisfaction__c</fullName>
    <label>Store Interaction Satisfaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>