force-app/main/default/objects/Visit_Store_Interaction_Insights__c/fields/Time_Spent_In_Store__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_In_Store__c</fullName>
    <label>Time Spent In Store</label>
    <length>255</length>
    <type>Text</type>
</CustomField>