force-app/main/default/objects/Visit_Store_Interaction_Insights__c/fields/Visit_Frequency_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Visit_Frequency_Last_12_Months__c</fullName>
    <label>Visit Frequency (Last 12 Months)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>