force-app/main/default/objects/Visit_Store_Interaction_Insights__c/fields/Visit_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Visit_Purpose__c</fullName>
    <label>Visit Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>