force-app/main/default/objects/Visit_Store_Interaction_Insights__c/fields/Walk_in_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Walk_in_Conversion_Rate__c</fullName>
    <label>Walk-in Conversion Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>